# QtTest

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp
